--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node_modules/.bin/coffee index.coffee"
   },
   "dependencies": {
-    "coffee-script", "1.9.3",
-    "hyperweb": "0.0.0"
+    "coffee-script": "1.9.3",
+    "hyperweb": "0.0.1"
   },
   "engines": {
     "node": "0.12.2"
